fixed projet name

--- a/Yoplet/build.properties
+++ b/Yoplet/build.properties
@@ -2,8 +2,8 @@
 # General
 #------------------------------------------------------------
 version=1.1
-title=Applet
-component=Applet
+title=Yoplet
+component=Yoplet
 
 #------------------------------------------------------------
 # Compile
