--- a/Yoplet/build.xml
+++ b/Yoplet/build.xml
@@ -82,7 +82,7 @@
 	
 	<target name="sign-jar" description="jar sign">
 		<copy todir="test" file="build/archives/yoplet.jar" overwrite="true"/>
-		<signjar jar="build/archives/applet.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
+		<signjar jar="build/archives/yoplet.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
 	</target>
 	
 	<target name="run-test" depends="init-browser">
