--- a/Yoplet/build.xml
+++ b/Yoplet/build.xml
@@ -81,9 +81,10 @@
 	</target>
 	
 	<target name="sign-jar" description="jar sign">
-		<copy todir="test" file="build/archives/yoplet.jar" overwrite="true"/>
 		<signjar jar="build/archives/yoplet.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
 	</target>
+	
+	<target name="release" description="release" depends="build,sign-jar"/>
 	
 	<target name="run-test" depends="init-browser">
 		<copy todir="${http.location}" overwrite="true">
