installer spring cleaning

--- a/Yoplet/src/install-process/build.xml
+++ b/Yoplet/src/install-process/build.xml
@@ -34,6 +34,6 @@
 	</target>
 	
 	<target name="cop-files">
-		<copy file="${basedir}" todir="${install_dir}"/>
+		<copy file="${basedir}/lib/yoplet.jar" todir="${install_dir}"/>
 	</target>
 </project>
