--- a/Yoplet/src/install-process/build.xml
+++ b/Yoplet/src/install-process/build.xml
@@ -1,12 +1,13 @@
-<project basedir="${basedir}">
+<project basedir=".">
 	<tstamp>
 		<format property="NOW" pattern="MM/dd/yyyy hh:mm aa" />
 		<format property="TODAY" pattern="yyyy-MM-dd"/>
 	</tstamp>
 
 	<property environment="env"/>
+	<property file="ant.install.properties"/>
 
-	<target name="install" depends="init, gen-key, sign-jar, cop-files"/>
+	<target name="install" depends="init, gen-key, sign-jar"/>
 
 	<target name="init">
 		<echo>+--------------------------------------------------------------------+</echo>
@@ -25,8 +26,8 @@
 	
 	<target name="Base"/>
 	
-	<target name="gen-key" description="certificate generation (usefull for getting into the filesystem" if="key.gen" depends="del-key">
-		<genkey alias="${key.alias}" storepass="${key.store.pass}" verbose="true">
+	<target name="gen-key" description="certificate generation (usefull for getting into the filesystem" if="gen.key" depends="del-key">
+		<genkey alias="${key.alias}" storepass="${key.store.pass}" verbose="true" >
 		  <dname>
 		    <param name="CN" value="${key.name}"/>
 		    <param name="OU" value="${key.organizational.unit}"/>
@@ -35,11 +36,13 @@
 		    <param name="C"  value="${key.country}"/>
    		    <param name="ST"  value="${key.state}"/>
 		  </dname>
-		</genkey>		
+		</genkey>
 	</target>
 	
 	<target name="sign-jar">
-		<signjar jar="${base_dir}/lib/yoplet.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
+		<signjar jar="${basedir}/lib/yoplet.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="false" destDir="${install_dir}" >
+			<fileset dir="${basedir}/lib/" includes="yoplet.jar"/>
+		</signjar>
 	</target>
 	
 	<target name="del-key" description="key certificate deletion">
@@ -47,10 +50,6 @@
 		<exec executable="${exec}">
 			<arg line="-delete -alias ${key.alias} -storepass ${key.store.pass}"/>
 		</exec>
-	</target>
-	
-	<target name="cop-files">
-		<copy file="${basedir}/lib/yoplet.jar" todir="${install_dir}"/>
 	</target>
 	
 </project>
