--- a/Yoplet/build.xml
+++ b/Yoplet/build.xml
@@ -84,7 +84,7 @@
 		<signjar jar="build/archives/yoplet.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
 	</target>
 	
-	<target name="release" depends="build">
+	<target name="release-src" depends="build">
 		<delete file="build/archives/yoplet-${build.version}.zip"/>
 		<delete file="build/archives/yoplet-${build.version}.tar.gz"/>
 		<zip destfile="build/archives/yoplet-${build.version}.zip">
@@ -96,6 +96,19 @@
 				<tarfileset dir="build/archives" includes="*installer.jar"/>			
 		</tar>
 	</target>
+	
+	<target name="release-dist" depends="build-installer">
+		<delete file="build/archives/yoplet.jar"/>
+		<copy file="build/archives/Yoplet-installer.jar" tofile="build/archives/yopletInstaller-${build.version}.jar"/>
+		<ftp server="ftp.berlios.de"
+		       userid="anonymous"
+		       password="anonymous@berlios.de"
+			   remotedir="incoming">
+		    <fileset dir="build/archives" includes="*${build.version}.*"/>
+		  </ftp>
+	</target>
+	
+	<target name="release" depends="release-src, release-dist"/>
 	
 	<target name="run-test" depends="init-browser">
 		<copy todir="${http.location}" overwrite="true">
