--- a/Yoplet/build.xml
+++ b/Yoplet/build.xml
@@ -98,10 +98,13 @@
 	</target>
 	
 	<target name="sign-jar" description="jar sign">
+		<!-- commons jars have ever been signed if new jars are used you must sign them -->
+		<!--
 		<signjar jar="build/lib/commons-logging-1.1.1.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
 		<signjar jar="build/lib/commons-io-1.4.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
 		<signjar jar="build/lib/commons-codec-1.3.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
 		<signjar jar="build/lib/commons-httpclient-3.1.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
+		-->
 		<signjar jar="build/archives/yoplet.jar" alias="${key.alias}" storepass="${key.store.pass}" verbose="true"/>
 	</target>
 	
