--- a/Yoplet/.classpath
+++ b/Yoplet/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="YOPLET_LIB/commons-io-1.4.jar"/>
-	<classpathentry kind="var" path="YOPLET_LIB/commons-codec-1.3.jar"/>
-	<classpathentry kind="var" path="YOPLET_LIB/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="var" path="YOPLET_LIB/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="build/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="build/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="build/lib/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="build/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
