--- a/Yoplet/build.xml
+++ b/Yoplet/build.xml
@@ -52,6 +52,7 @@
 			debug="${debug}" 
 			source="${source}" 
 			target="${target}"
+			includeantruntime="false"
 		>
 			<classpath refid="jars"/>
 		</javac>	
@@ -72,6 +73,10 @@
 			</manifest>
 			<fileset dir="build/classes" includes="**" excludes="**/*Test*"/>
 			<fileset dir="doc" includes="licence.txt"/>
+			<zipfileset src="build/lib/commons-io-1.4.jar" includes="**/*.class"/>
+			<zipfileset src="build/lib/commons-httpclient-3.1.jar" includes="**/*.class"/>
+			<zipfileset src="build/lib/commons-codec-1.3.jar" includes="**/*.class"/>
+			<zipfileset src="build/lib/commons-logging-1.1.1.jar" includes="**/*.class"/>			
 		</jar>
 	</target>
 	
