folder listing operation

--- a/Yoplet/build.properties
+++ b/Yoplet/build.properties
@@ -46,3 +46,18 @@ key.store.pass=dummyPassword
 #------------------------------------------------------------
 http.location=${myenv.HOME}/public_html
 http.test.url=http://localhost/~${myenv.USER}
+
+#---------------------------------------------------------------------------#
+# Directories                                                               #
+#---------------------------------------------------------------------------#
+src=src
+conf=conf
+lib=lib
+build=build
+classes=build/classes
+archives=build/archives
+reports=build/reports
+temp=build/temp
+src-test=test
+instr=build/instr
+coverage=build/coverage
