--- a/Yoplet/.classpath
+++ b/Yoplet/.classpath
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
+	<classpathentry kind="src" path="test/java"/>
+	<classpathentry kind="lib" path="build/lib/org.restlet.jar"/>
+	<classpathentry kind="lib" path="build/lib/junit.jar"/>
+	<classpathentry kind="lib" path="build/lib/com.noelios.restlet.jar"/>
+	<classpathentry kind="lib" path="build/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="build/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="build/lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="lib" path="build/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="build/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="build/lib/org.restlet.ext.json_2.0.jar"/>
+	<classpathentry kind="lib" path="build/lib/plugin-jar.jar"/>
+	<classpathentry kind="lib" path="build/lib/json_simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
