--- a/Yoplet/build.properties
+++ b/Yoplet/build.properties
@@ -4,6 +4,7 @@
 version=0
 title=Yoplet
 component=Yoplet
+maven=maven
 
 #------------------------------------------------------------
 # Compile
@@ -17,8 +18,8 @@ debug=on
 # VM unless you explicitly set this attribute to the value 1.1 
 # (which is the default value for JDK 1.1 to 1.3). We highly recommend to always specify this attribute.
 #------------------------------------------------------------
-source=1.4
-target=1.4
+source=1.5
+target=1.5
 
 
 #------------------------------------------------------------
